--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <img id="alt" src="img/ALT0.png">
 <button id="restart" onclick="newNote();">Invia / Send</button>
 
-<p id="streak">Streak: 0</p>
+<p id="streak">Streak 0</p>
 
 <select id="noteselect">
     <option id="C" value="C">Do</option>
