--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 <img id="note" src="img/NOTE.png">
 <img id="alt" src="img/ALT0.png">
 <button id="restart" onclick="newNote();">Invia / Send</button>
-
-<p id="streak">Streak 0</p>
+<!-- please update the code github -->
+<!-- thanks github :) --> 
+<p id="streak">Streak = 0</p>
 
 <select id="noteselect">
     <option id="C" value="C">Do</option>
